# shareholderletteranalysis

./: .gitignore  README.md  get_data.py  graph.py  main.py  prompts.py  pyproject.toml
